--- a/src/Components/GradientList/GradientList.scss
+++ b/src/Components/GradientList/GradientList.scss
@@ -4,6 +4,7 @@
     position: relative;
     height: 100%;
     width: 60%;
+    background: $dottedImg;
     order: 3;
     color: $primaryTextColor;
     overflow-y: auto;
