--- a/src/Components/GradientField/GradientField.scss
+++ b/src/Components/GradientField/GradientField.scss
@@ -2,8 +2,8 @@
 
 .GradientField {
     background: $secondaryBackgroundColor;
-    border-bottom: $secondaryBorder;
-    height: 150px;
+    border-bottom: $primaryBorder;
+    height: 160px;
     header {
         height: $xlgFont;
         width: 100%;
@@ -17,7 +17,7 @@
         .GradientField__index {
             width: $lrgFont;
             height: $lrgFont;
-            margin: 0 15px 0 5px;
+            margin: 0 10px 0 10px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -31,12 +31,19 @@
             border-radius: $circleRadius;
         }
         .GradientField__name {
+            padding-left: 5px;
+            border-left: $tertiaryBorder;
+            text-overflow: ellipsis;
+            overflow: hidden; 
+            white-space: nowrap;
             cursor: text;
             input {
-                background: $secondaryTextColor;
+                background: $tertiaryBackgroundColor;
                 border-style: none;
-                color: $secondaryBackgroundColor;
-                font-size: $smlFont;
+                border: $tertiaryBorder;
+                border-radius: $borderRadius;
+                color: $secondaryTextColor;
+                font-size: $medFont;
             }
         }
         & > div:last-child {
@@ -75,7 +82,7 @@
                     text-shadow: 1px 1px black;
                 }
                 &:first-child { font-size: $lrgFont; }
-                &:last-child:hover { color: $warningTextColor; }
+                &:last-child { color: $warningTextColor; }
                 .btn--inactive, .btn--active {
                     position: absolute;
                     width: 6px;
@@ -103,7 +110,8 @@
             div {
                 width: 50px;
                 height: 50px;
-                border: $secondaryBorder;
+                border: $tertiaryBorder;
+                border-radius: 2px;
                 cursor: pointer;
             }
         }
