--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -23,10 +23,13 @@ $codeBlue:                    #72e0d1;
 $codeYellow:                  #f5d67b;
 $codeOrange:                  #fc9463;
 // GRADIENTS
-$orangePinkGradient:            linear-gradient(-45deg, #ff8a00 40% 30%,#e52e71 60% 70%, #e52e71 100%);
+$orangePinkGradient:            linear-gradient(-45deg, #fcca42 ,#e52e71);
 $buttonGradient:                linear-gradient(180deg, #1a1a1a 30%, #0c0c0c);
 $buttonGradientHover:           linear-gradient(180deg, #0c0c0c 30%, #1a1a1a);
-
+$buttonGradientLrg:             linear-gradient(180deg, #1a1a1a 50%, #0c0c0c 85%, #0c0c0c);
+$buttonGradientHoverLrg:        linear-gradient(180deg, #0c0c0c 15%, #1a1a1a 50%, #1a1a1a);
+// IMAGE URLS
+$dottedImg:                     url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAQAAABuBnYAAAAAU0lEQVQIHQXBwRGDIBAAwO2/AMcCDHAcPjIRxjJ8Je1kl1uqUgphsWu6w0sIG6npLpcUBql4e/wsVRKabrkNTacIYbMrwsF06rqUhsnXVKVT+Hj+Ue4rPSONk4kAAAAASUVORK5CYII=);
 
 
 
