--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -23,7 +23,7 @@ $codeBlue:                    #72e0d1;
 $codeYellow:                  #f5d67b;
 $codeOrange:                  #fc9463;
 // GRADIENTS
-$orangePinkGradient:            linear-gradient(-45deg, #fcca42 ,#e52e71);
+$orangePinkGradient:            linear-gradient(-45deg,#e52e71, #fcca42);
 $buttonGradient:                linear-gradient(180deg, #1a1a1a 30%, #0c0c0c);
 $buttonGradientHover:           linear-gradient(180deg, #0c0c0c 30%, #1a1a1a);
 $buttonGradientLrg:             linear-gradient(180deg, #1a1a1a 50%, #0c0c0c 85%, #0c0c0c);
