--- a/src/Components/GradientSliderButtonBox/GradientSliderButtonBox.scss
+++ b/src/Components/GradientSliderButtonBox/GradientSliderButtonBox.scss
@@ -15,9 +15,12 @@
             margin-bottom: 1px;
             button {
                 font-size: $xlgFont;
-                &:first-child { 
-                    //border-right: $tertiaryBorder; 
-                    margin-right: 1px;
+                &:first-child {
+                    width: 35.5px;
+                }
+                &:last-child { 
+                    margin-left: 1px;
+                    width: 34.5px;
                 }
                 &:hover { font-size: $lrgFont; }
             }
