--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -1,4 +1,5 @@
-@import "../../variables/variables.scss";
+@import "../../constants/constants.scss";
+
 $primaryBg: #181719;
 $primarytColor: #c2c2c2;
 $borderColor: #111;
