--- a/src/Components/DeleteConfirmMsg/DeleteConfirmMsg.scss
+++ b/src/Components/DeleteConfirmMsg/DeleteConfirmMsg.scss
@@ -1,4 +1,4 @@
-@import "../../variables/variables.scss";
+@import "../../constants/constants.scss";
 
 .DeleteConfirmMsg {
     position: absolute;
