--- a/src/Components/GradientField/GradientField.scss
+++ b/src/Components/GradientField/GradientField.scss
@@ -1,4 +1,4 @@
-@import "../../variables/variables.scss";
+@import "../../constants/constants.scss";
 
 .GradientField {
     background: $secondaryBackgroundColor;
