--- a/src/constants/constants.scss
+++ b/src/constants/constants.scss
@@ -22,6 +22,8 @@ $buttonInactiveColor:         #0c0c0c;
 $codeBlue:                    #72e0d1;
 $codeYellow:                  #f5d67b;
 $codeOrange:                  #fc9463;
+$codeWhite:                   #aaafbb;
+$codeRed:                     #ef596f;
 // GRADIENTS
 $orangePinkGradient:            linear-gradient(-45deg,#e52e71, #fcca42);
 $buttonGradient:                linear-gradient(180deg, #1a1a1a 30%, #0c0c0c);
