--- a/src/Components/Code/Code.scss
+++ b/src/Components/Code/Code.scss
@@ -12,17 +12,30 @@
             background: $buttonGradient;
             button {
                 width: 35px;
+                height: 28px;
                 div {
-                    width: 24px;
-                    height: 24px;
+                    width: 20px;
+                    height: 20px;
                     background-position: center;
                     background-repeat: no-repeat;
                     background-size: contain;
                 }
                 &:hover {
                     background: $buttonGradientHover;
+                    div {
+                        width: 18px;
+                        height: 18px;
+                    }
                 }
             }
         }
+    }
+    div {
+        span { font-family: "Fira", monospace; }
+        span.token.punctuation { color: $codeWhite; }
+        span.token.property { color: $codeWhite; }
+        span.token.number { color: $codeYellow; }
+        span.token.function { color: $codeOrange; }
+        span.token.unit { color: $codeRed; }
     }
 }
