set validity by class and state rather than pattern

--- a/src/Components/LengthInput/LengthInput.scss
+++ b/src/Components/LengthInput/LengthInput.scss
@@ -15,7 +15,7 @@
         color: $secondaryTextColor;
         text-align: center;
     }
-    input:invalid {
+    .invalid {
         color: $warningTextColor;
         box-shadow: none;
     }
