--- a/src/constants/constants.scss
+++ b/src/constants/constants.scss
@@ -25,6 +25,7 @@ $codeOrange:                  #fc9463;
 $codeWhite:                   #aaafbb;
 $codeRed:                     #ef596f;
 $codePurple:                  #c85fde;
+$codeGreen:                   #bcffac;
 // GRADIENTS
 $orangePinkGradient:            linear-gradient(-45deg,#e52e71, #fcca42);
 $buttonGradient:                linear-gradient(180deg, #1a1a1a 30%, #0c0c0c);
