--- a/src/Components/Code/Code.scss
+++ b/src/Components/Code/Code.scss
@@ -45,5 +45,14 @@
         span.token.unit { color: $codeRed; }
         span.token.keyword { color: $codePurple; }
         span.token.css-color-name {color: $codeGreen; }
+        .ColorPreview {
+            display: inline-block;
+            width: 12px;
+            height: 12px;
+            margin-right: 2px;
+            background-position: center;
+            background-repeat: no-repeat;
+            border: 2px solid white;
+        }
     }
 }
