add rgb, rgba code lines

--- a/src/constants/constants.scss
+++ b/src/constants/constants.scss
@@ -20,7 +20,7 @@ $warningTextColor:            #ff1493;
 $buttonInactiveColor:         #0c0c0c;
 // CODE TEXT COLORS
 $codeBlue:                    #72e0d1;
-$codeYellow:                  #f5d67b;
+$codeYellow:                  #ffe188;
 $codeOrange:                  #fc9463;
 $codeWhite:                   #aaafbb;
 $codeRed:                     #ef596f;
