--- a/src/Components/Code/Code.scss
+++ b/src/Components/Code/Code.scss
@@ -53,6 +53,7 @@
             background-position: center;
             background-repeat: no-repeat;
             border: 2px solid white;
+            border-radius: 1px;
         }
     }
 }
