--- a/src/Components/Code/Code.scss
+++ b/src/Components/Code/Code.scss
@@ -45,6 +45,7 @@
         span.token.unit { color: $codeRed; }
         span.token.keyword { color: $codePurple; }
         span.token.css-color-name {color: $codeGreen; }
+        span.token.hex { color: $codeBlue; }
         .ColorPreview {
             display: inline-block;
             width: 12px;
