--- a/src/Components/Code/Code.scss
+++ b/src/Components/Code/Code.scss
@@ -7,7 +7,19 @@
     color: $primaryTextColor;
     background-image: $dottedImg;
     header {
-        div {
+        & > span {
+            height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .bite-count {
+            margin-left: 5px;
+            font-size: $xsmFont;
+            color: $tertiaryTextColor;
+        }
+        & > div {
+            margin-left: auto;
             height: 100%;
             display: flex;
             content: "";
