--- a/src/Components/ResultDisplay/ResultDisplay.scss
+++ b/src/Components/ResultDisplay/ResultDisplay.scss
@@ -11,20 +11,18 @@
             display: flex;
             justify-content: space-between;
             div {
-                height: 100%;
-                background: $buttonGradient;
                 .ResultDisplay__menu-btn {
+                    height: 100%;
+                    background: $buttonGradient;
                     width: 35px;
                     font-size: $lrgFont;
-                    &:hover {
-                        font-size: $medFont;
-                    }
                     div {
                         width: 20px;
                         height: 20px;
                         background-repeat: no-repeat;
                         background-position: center;
                         background-size: contain;
+                        pointer-events: none;
                     }
                 }
                 &:hover {
