comment out Code with  prefixes and gradient names

--- a/src/Components/GradientField/GradientField.scss
+++ b/src/Components/GradientField/GradientField.scss
@@ -68,7 +68,7 @@
                 border-left: $tertiaryBorder;
                 color: $secondaryTextColor;
                 text-shadow: -1px -1px black;
-                font-size: $xlgFont;
+                font-size: $medFont;
                 line-height: $xlgFont;
                 vertical-align: middle;
                 cursor: pointer;
