--- a/src/constants/constants.scss
+++ b/src/constants/constants.scss
@@ -19,13 +19,14 @@ $activeButtonTextColor:       #4cc3f1;
 $warningTextColor:            #ff1493;
 $buttonInactiveColor:         #0c0c0c;
 // CODE TEXT COLORS
-$codeBlue:                    #72e0d1;
+$codeBlue:                    #8cebde;
 $codeYellow:                  #ffe188;
-$codeOrange:                  #fc9463;
+$codeOrange:                  #f88c44;
 $codeWhite:                   #aaafbb;
 $codeRed:                     #ef596f;
 $codePurple:                  #c85fde;
 $codeGreen:                   #bcffac;
+$codeGray:                    #474747;
 // GRADIENTS
 $orangePinkGradient:            linear-gradient(-45deg,#e52e71, #fcca42);
 $buttonGradient:                linear-gradient(180deg, #1a1a1a 30%, #0c0c0c);
