--- a/src/Components/Code/Code.scss
+++ b/src/Components/Code/Code.scss
@@ -50,6 +50,7 @@
         max-height: 100%;
         max-width: 100%;
         overflow: auto;
+        font-size: $medFont;
         span { font-family: "Fira", monospace; }
         span.token.punctuation { color: $codeWhite; }
         span.token.property { color: $codeWhite; }
@@ -59,7 +60,13 @@
         span.token.keyword { color: $codePurple; }
         span.token.css-color-name {color: $codeGreen; }
         span.token.hex { color: $codeBlue; }
-        span.token.vendor-prefix { color: $codeBlue; }
+        span.token.vendor-prefix { color: $codeBlue; font-style: italic; }
+        span.token.comment {
+            color: $codeGray;
+            font-family: "Fantasque";
+            font-style: italic;
+            font-size: $lrgFont;
+        }
         .ColorPreview {
             display: inline-block;
             width: 12px;
