--- a/src/Components/Code/Code.scss
+++ b/src/Components/Code/Code.scss
@@ -1,6 +1,7 @@
 @import "../../constants/constants.scss";
 
 .Code {
+    position: relative;
     width: 40%;
     height: 50%;
     max-height: 50%;
@@ -44,13 +45,18 @@
             }
         }
     }
-    div {
-        code {user-select: auto;}
-        height: calc(100% - 35px);
+    .Code__body {
+        position: relative;
+        width: 100%;
+        height: calc(100% - 30px);
+    }
+    #code {
+        height: 100%;
         max-height: 100%;
         max-width: 100%;
         overflow: auto;
         font-size: $medFont;
+        code {user-select: auto;}
         span { font-family: "Fira", monospace; }
         span.token.punctuation { color: $codeWhite; }
         span.token.property { color: $codeWhite; }
