create full screen mode

--- a/src/Components/ResultDisplay/ResultDisplay.scss
+++ b/src/Components/ResultDisplay/ResultDisplay.scss
@@ -11,7 +11,7 @@
             display: flex;
             justify-content: space-between;
             div {
-                .ResultDisplay__menu-btn {
+                .ResultDisplay__btn {
                     height: 100%;
                     background: $buttonGradient;
                     width: 35px;
