--- a/src/constants/constants.scss
+++ b/src/constants/constants.scss
@@ -21,8 +21,8 @@ $buttonInactiveColor:         #0c0c0c;
 // CODE TEXT COLORS
 $codeBlue:                    #8cebde;
 $codeYellow:                  #ffe188;
-$codeOrange:                  #f88c44;
-$codeWhite:                   #aaafbb;
+$codeOrange:                  #fca266;
+$codeWhite:                   #d4daec;
 $codeRed:                     #ef596f;
 $codePurple:                  #c85fde;
 $codeGreen:                   #bcffac;
