--- a/src/App.scss
+++ b/src/App.scss
@@ -89,6 +89,37 @@
         align-items: center;
         z-index: 1001;
     }
+    #fullscreen {
+        position: absolute;
+        width: calc(100vw - 2px);
+        height: calc(100vh - 2px);
+        z-index: 9999;
+        pointer-events: none;
+        div {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: flex-end;
+            button {
+                width: 50px;
+                height: 50px;
+                margin: 20px;
+                background: rgba(0, 0, 0, 0.7);
+                border: 5px solid $primaryTextColor;
+                color: $primaryTextColor;
+                border-radius: 10px;
+                font-weight: bolder;
+                font-size: 30px;
+                cursor: pointer;
+                pointer-events: auto;
+                &:hover {
+                    color: $warningTextColor;
+                    background: rgba(0, 0, 0, 0.9);
+                    font-size: 25px;
+                }
+            }
+        }
+    }
 }
 
 @media only screen and (max-width: 1000px) {
