--- a/src/Components/Code/Code.scss
+++ b/src/Components/Code/Code.scss
@@ -56,6 +56,7 @@
         max-width: 100%;
         overflow: auto;
         font-size: $medFont;
+        text-shadow: -1px -1px 2px black;
         code {user-select: auto;}
         span { font-family: "Fira", monospace; }
         span.token.punctuation { color: $codeWhite; }
