--- a/src/Components/GradientField/GradientField.scss
+++ b/src/Components/GradientField/GradientField.scss
@@ -110,12 +110,18 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            div {
+            .GradientField__preview__checkered {
                 width: 50px;
                 height: 50px;
+                background-color: white;
+                background-repeat: repeat;
                 border: $tertiaryBorder;
                 border-radius: 2px;
-                cursor: pointer;
+                .GradientField__preview__gradient {
+                    width: 100%;
+                    height: 100%;
+                    cursor: pointer;
+                }
             }
         }
         .GradientField__settings {
