--- a/src/constants/constants.scss
+++ b/src/constants/constants.scss
@@ -24,7 +24,7 @@ $codeYellow:                  #ffe188;
 $codeOrange:                  #fca266;
 $codeWhite:                   #d4daec;
 $codeRed:                     #ef596f;
-$codePurple:                  #c85fde;
+$codePurple:                  #e56efd;
 $codeGreen:                   #bcffac;
 $codeGray:                    #474747;
 // GRADIENTS
