--- a/src/Components/Code/Code.scss
+++ b/src/Components/Code/Code.scss
@@ -8,17 +8,6 @@
     color: $primaryTextColor;
     background-image: $dottedImg;
     header {
-        & > span {
-            height: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .bite-count {
-            margin-left: 5px;
-            font-size: $xsmFont;
-            color: $tertiaryTextColor;
-        }
         & > div {
             margin-left: auto;
             height: 100%;
@@ -48,13 +37,14 @@
     .Code__body {
         position: relative;
         width: 100%;
-        height: calc(100% - 30px);
+        height: calc(100% - 40px);
     }
     #code {
         height: 100%;
         max-height: 100%;
         max-width: 100%;
         overflow: auto;
+        margin: 5px;
         font-size: $medFont;
         text-shadow: -1px -1px 2px black;
         code {user-select: auto;}
