--- a/src/Components/MainMenu/MainMenu.scss
+++ b/src/Components/MainMenu/MainMenu.scss
@@ -2,36 +2,86 @@
 
 .MainMenu {
     position: absolute;
-    right: 0;
     top: 0;
-    width: 30%;
-    min-width: 120px    ;
-    max-width: 150px;
-    padding: 10px;
-    background: #202020;
-    color: $primaryTextColor;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
     display: flex;
+    justify-content: space-evenly;
     flex-direction: column;
-    h2 {
-        font-size: $medFont;
-        text-align: center;
-    }
-    div {
-        padding: 5px 0;
-    }
-    div div {
+    overflow-y: auto;
+    background: $secondaryBackgroundColor;
+    & > div {
+        width: 100%;
+        height: 14%;
+        border-bottom: $tertiaryBorder;
         display: flex;
-        justify-content: space-between;
-        &:hover { background: $buttonHoverBackgroundColor; }
-        label {
-            cursor: pointer;
+        justify-content: space-around;
+        align-items: center;
+        &:last-child {
+            border: none;
+            button {
+                padding: 2px 30px;
+            }
         }
     }
-    button {
+    p {
+        color: $secondaryTextColor;
         font-size: $medFont;
-        border: 1px solid $primaryTextColor;
+        width: 100%;
+    }
+    button {
+        position: relative;
+        height: 26px;
+        padding: 0 10px;
         background: transparent;
+        background: $buttonGradient;
         color: $primaryTextColor;
-        &:hover { background: $buttonHoverBackgroundColor; }
+        font-size: $medFont;
+        border: $secondaryBorder;
+        border-radius: $borderRadius;
+        text-shadow: -1px -1px black;
+        cursor: pointer;
+        &:hover {
+            background: $buttonHoverBackgroundColor;
+            background: $buttonGradientHover;
+            color: $activeButtonTextColor;
+            text-shadow: 1px 1px black;
+        }
+    }
+    span {
+        color: $tertiaryTextColor;
+        font-size: $xsmFont;
+    }
+    input {
+        max-width: 140px;
+        height: 22px;
+        padding-right: 5px;
+        background: $buttonGradientHover;
+        color: $secondaryTextColor;
+        border-radius: $borderRadius;
+        border: $secondaryBorder;
+        text-align: right;
+        font-size: $smlFont;
     }
 }
+
+
+
+@media only screen and (max-width: 500px) {
+    .CodeSettings {
+           h1 {
+               font-size: $medFont;
+           }
+           button {
+               font-size: $xsmFont;
+           }
+           p {
+              font-size: $smlFont;
+           }
+           span {
+               font-size: $xxsFont;
+           }
+       }
+   }
